# nftables-http-api

./: .gitignore  README.md  nftables-api.py  pyproject.toml  ruff.toml  setup.cfg
nft_http_api_client/: README.md  pyproject.toml  setup.cfg
nft_http_api_client/nftables_api_client/: __init__.py  __version__.py  client.py
nft_http_api_server/: README.md  nftables-http-api.py  pyproject.toml  setup.cfg
nft_http_api_server/nftables_api/: __init__.py  app.py  config.py  server.py
nft_http_api_server/nftables_api/middlewares/: authentication.py
nft_http_api_server/nftables_api/resources/: __init__.py
nft_http_api_server/nftables_api/utils/: parse.py
nftables_api/: __version__.py  app.py  config.py
nftables_api/middlewares/: authentication.py
nftables_api/resources/: nft_set.py
nftables_api/utils/: output.py  parse.py
scripts/: test.sh
tests/: config.yaml  conftest.py  test_api_set.py
