[metadata]
name = nftables_api-server
version = attr: nftables_api.__version__
author = Georg Pfuetzenreuter
author_email = georg+python@lysergic.dev
description = RESTful HTTP API for nftables (Server)
license = EUPL-1.2
long_description = file: README.md, LICENSE

[options]
package_dir=
    =.
packages=find:
python_requires = >=3.6

[options.packages.find]
where=.
